<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="top.zsh2401.blogapplication.AboutActivity"
    android:background="@color/aboutBG">
    <Button
        android:id="@+id/button_about_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/aboutBG"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/back"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/about_text"
        android:textSize="45sp"
        android:gravity="center" />
    <TextView
        android:id="@+id/about_text"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_message"
        android:textSize="15sp"/>
    <TextView
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_text"
        android:text="@string/about_message_2"
        android:textSize="15sp"/>
    <TextView
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_about_back"
        android:text="@string/about_message_3"
        android:textSize="15sp"/>
</RelativeLayout>